Fix sizing on mobile

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -122,6 +122,9 @@ button {
   #weather-display {
     padding: 0.625rem;
   }
+  #name {
+    font-size: 2.125rem;
+  }
   #humidity::before,
   #wind::before,
   #temp::before,
